--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <li>Telegram : @xdadaya</li>
     </ul>
     <h3 id="about-me">About me</h3>
-    <p>I can describe myself as a developer who takes work very seriously. 
-    I always try to create scalable and understandable solutions.</p>
+    <p>I can describe myself as a developer who takes work very seriously. I always try to create scalable and understandable solutions.</p>
     <h3 id="skills">Skills</h3>
     <ul>
         <li>HTML5</li>
