--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <li>NodeJS</li>
                 <li>ReactJS</li>
             </ul>   
-        <h3 id="code-examples">Code examples</h3>
+        <h3 id="code-examples">Code example</h3>
         <a name="code"></a>
         <pre>
             <code class="lang-javascript">
